--- a/notebook/AssessConsistencyData.ipynb
+++ b/notebook/AssessConsistencyData.ipynb
@@ -175,6 +175,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Or you can load my model from Huggingface"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_path = \"Phucle103198/PARRA\"\n",
+    "\n",
+    "tokenizer = AutoTokenizer.from_pretrained(model_path)\n",
+    "model = AutoModelForSequenceClassification.from_pretrained(model_path)\n",
+    "print(model.config.id2label)\n",
+    "model.eval()\n",
+    "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
+    "model = model.to(device)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Or if you want to try another model, you can download via Huggingface"
    ]
   },
